# game-playgrounds

./: .gitignore  CLAUDE.md  COMPARISON.md  README.md
.claude/: settings.json
.claude/hooks/: auto-lint.sh  block-dangerous-commands.sh  block-secret-access.sh  log-failure.sh  log-subagent.sh  restore-context.sh  save-context.sh
.claude/skills/dev-all/: SKILL.md
.claude/skills/investigate/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: sample.md
babylon/: .gitignore  CLAUDE.md  README.md  REVIEW.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
babylon/docs/: ADDING-A-SAMPLE.md  SAMPLES.md
babylon/src/: main.ts  style.css
babylon/src/ai/: README.md  navmesh.test.ts  navmesh.ts  navmeshDebug.ts  recast.ts
babylon/src/engine/: bootstrap.ts  havok.ts  hud.ts  input.ts  measureWebgpu.ts  scene.ts
babylon/src/measure/: config.test.ts  config.ts  determinism.test.ts  frameHook.ts  globals.ts  percentile.test.ts  probe.ts  renderSample.test.ts  renderSample.ts
babylon/src/samples/: registry.ts  types.ts
babylon/src/samples/01-character-controller/: README.md  index.ts
babylon/src/samples/02-physics-grab-throw/: README.md  index.ts
babylon/src/samples/03-paint-on-mesh/: README.md  index.ts
babylon/src/samples/04-first-person-controller/: README.md  index.ts
babylon/src/samples/05-spatial-audio/: README.md  index.ts
babylon/src/samples/06-hide-and-seek-disguise/: README.md  index.ts
babylon/src/samples/07-ragdoll-core/: README.md  index.ts
babylon/src/samples/08-red-light-green-light/: README.md  index.ts
babylon/src/samples/09-coop-carry/: README.md  index.ts
babylon/src/samples/10-emote-wheel/: README.md  index.ts  wheel-overlay.ts
babylon/src/samples/11-top-down-twin-stick/: README.md  index.ts
babylon/src/samples/12a-spherical-gravity/: README.md  index.ts
babylon/src/samples/12b-tiny-planet/: README.md  index.ts
babylon/src/samples/13-stress-bodies/: README.md  index.ts  spawn.ts  stressScene.ts
babylon/src/samples/14-navmesh-pathfind/: README.md  index.ts  pathfind.test.ts  pathfind.ts
babylon/src/samples/16-guard-ai/: README.md  guard.test.ts  guard.ts  index.ts
bevy/: .gitignore  CLAUDE.md  Cargo.toml  README.md
bevy/.cargo/: config_fast_builds.toml.example
bevy/docs/: ADDING-A-SAMPLE.md  SAMPLES.md
bevy/src/: main.rs
bevy/src/engine/: hud.rs  input.rs  mod.rs  nav.rs  scene.rs
bevy/src/samples/: mod.rs  s01_character_controller.rs  s02_physics_grab_throw.rs  s03_paint_on_mesh.rs  s04_first_person_controller.rs  s05_spatial_audio.rs  s06_hide_and_seek.rs  s07_ragdoll_core.rs  s08_red_light_green_light.rs  s09_coop_carry.rs  s10_emote_wheel.rs  s11_top_down_twin_stick.rs  s12_tiny_planet.rs  s13_stress_bodies.rs  s14_navmesh_pathfind.rs  s16_guard_ai.rs
docs/: PACKAGING.md
docs/claude/: review_points.md
docs/web-on-steam/: PR0-webgpu-availability.md
logs/subagents/: 2026-06-20.jsonl
net/: CLAUDE.md
net/bevy/: CLAUDE.md  Cargo.toml
net/bevy/src/: bots.rs  client.rs  client_render.rs  conditioner.rs  config.rs  interpolation.rs  jitter.rs  lib.rs  main.rs  metrics.rs  probe.rs  protocol.rs  render.rs  rng.rs  scenario.rs  server.rs  sim.rs  transport.rs  wan_profiles.rs
net/bevy/tests/: net_loopback.rs  probe_scenario.rs
net/bevy/tools/: real-gpu-render.sh
net/measurements/n2/: README.md  bevy-latency.jsonl  bevy-scenario-manifest.json  bevy-stress.jsonl  bevy-tickrate.jsonl  bevy-wan.jsonl  web-babylon-client-render.jsonl  web-latency.jsonl  web-scenario-manifest.json  web-stress.jsonl  web-three-client-render.jsonl  web-tickrate.jsonl  web-wan.jsonl
net/measurements/web-on-steam/: README.md  electron-babylon-webgl.jsonl  electron-babylon-webgpu.jsonl  electron-three-webgl.jsonl  electron-three-webgpu.jsonl
net/protocol/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
net/protocol/src/: clientRender.test.ts  clientRender.ts  clientRenderFixtures.json  clientRenderFixtures.test.ts  index.ts  jitter.test.ts  jitter.ts  jitterFixtures.json  jitterFixtures.test.ts  messages.ts  metrics.ts  rng.ts  scenarioManifest.ts  wanProfiles.test.ts  wanProfiles.ts
net/server/: .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
net/server/src/: app.ts  config.ts  index.ts  loadedServer.ts  scenario.ts  telemetry.ts
net/server/src/bots/: botDriver.ts
net/server/src/client/: probeClient.ts
net/server/src/metrics/: collector.ts  validate.ts  writer.ts
net/server/src/rooms/: GameRoom.ts
net/server/src/scenarios/: defs.ts  runner.ts  types.ts
net/server/src/sim/: rng.ts  world.ts
net/server/src/transport/: shim.ts
net/server/test/: collector.test.ts  probeClient.test.ts  room.integration.test.ts  scenarioDefs.test.ts  scenarioRunner.test.ts  shim.test.ts  validate.test.ts  world.test.ts
net/tools/: README.md  realGpuRender.mjs
net/web-babylon/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
net/web-babylon/smoke/: renderProbe.smoke.mjs
net/web-babylon/src/: config.ts  hud.ts  main.ts
net/web-three/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
net/web-three/smoke/: renderProbe.smoke.mjs
net/web-three/src/: config.ts  main.ts  style.css
packaging/electron/: README.md  main.cjs  measure.mjs  package-lock.json  package.json
packaging/tauri/: Cargo.toml  README.md  tauri.conf.json
packaging/tauri/capabilities/: default.json
packaging/tauri/icons/: icon.icns
packaging/tauri/src/: main.rs
three/: CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
three/docs/: ADDING-A-SAMPLE.md  SAMPLES.md
three/src/: main.ts  style.css
three/src/engine/: bootstrap.ts  hud.ts  input.ts  scene.ts
three/src/measure/: config.test.ts  config.ts  globals.ts  percentile.ts  renderSample.test.ts  renderSample.ts  rng.ts
three/src/samples/: registry.ts  types.ts
(+68 files in other folders)
