[package]
name = "game-playgrounds-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri (WKWebView) host shell + measurement harness for the web-on-steam chapter (#175)."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"

[profile.release]
# Small, representative release build (Tauri's whole point vs Electron is size).
opt-level = "s"
lto = true
strip = true
